2011-09-07  OKAZAKI Tetsurou  <okazaki.tetsurou@gmail.com>  (tiny change)

	* progmodes/cc-fonts.el (c-font-lock-enclosing-decls):
	Check for null c-opt-block-decls-with-vars-key.  (Bug#9443)

2011-09-07  Leo Liu  <sdl.web@gmail.com>

	* net/rcirc.el (rcirc-mode): Conditionally initialize
	rcirc-input-ring.

2011-09-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/find-func.el (find-function-C-source): Only set
	find-function-C-source-directory after checking that we found a source
	file there (bug#9440).

2011-09-06  Alan Mackenzie  <acm@muc.de>

	* isearch.el (isearch-other-meta-char): Wherever a key list is
	unread, "unread" the prefix arg, too.  This fixes bug #8901.

2011-09-05  Oleksandr Gavenko  <gavenkoa@gmail.com>  (tiny change)

	* progmodes/grep.el (rgrep): Add "-type d" (bug#9414).

2011-09-05  Juri Linkov  <juri@jurta.org>

	* progmodes/grep.el (grep-process-setup): Fix comments (bug#8084).

2011-09-05  Juri Linkov  <juri@jurta.org>

	* progmodes/grep.el (grep-filter): Avoid incomplete processing by
	keeping point where processing of grep matches begins, and
	continue to delete remaining escape sequences from the same point.
	(grep-filter): Make leading zero optional in "0?1;31m" because
	git-grep emits "\033[1;31m" escape sequences unlike expected
	"\033[01;31m" as GNU Grep does (bug#9408).
	(grep-process-setup): Replace obsolete "ml=" with newer "sl=".

2011-09-05  Juri Linkov  <juri@jurta.org>

	* subr.el (y-or-n-p): Capitalize "yes".

2011-09-04  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (top): Require 'shell.  Use `tramp-unload-hook' but
	`tramp-cache-unload-hook' where appropriate.
	(tramp-methods): Rename `tramp-remote-sh' to
	`tramp-remote-shell'.  Add `tramp-remote-shell-args'.
	(tramp-handle-shell-command): New defun, moved from tramp-sh.el.

	* net/tramp-sh.el (top): Don't require 'shell.
	(tramp-methods): Add `tramp-remote-shell' and
	`tramp-remote-shell-args' entries.